objects/Search_Merge_Duplicate_Account__c.object
<CustomObject>
    <label>Search/Merge Duplicate Account Pair</label>
    <nameField>
        <displayFormat>MANUALMERGELOG-{0}</displayFormat>
        <label>Search/Merge Duplicate Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Search/Merge Duplicate Account Pair</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Account_to_Keep__c</fullName>
        <label>Account to Keep</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Household</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Search/Merge Duplicate Account Pair (Account to Keep)</relationshipLabel>
        <relationshipName>Search_Merge_Duplicate_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account_to_Merge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account to Merge</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Household</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Search/Merge Duplicate Account Pair (Account to Merge)</relationshipLabel>
        <relationshipName>Search_Merge_Duplicate_Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_to_Keep_Name__c</fullName>
        <formula>Account_to_Keep__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account to Keep Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_to_Merge_Name__c</fullName>
        <formula>Account_to_Merge__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account to Merge Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_from_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Start from Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Search/Merge Duplicate Account Pair</relationshipLabel>
        <relationshipName>Search_Merge_Duplicate_Account_Pair</relationshipName>
        <type>Lookup</type>
    </fields>
    <validationRules>
        <fullName>Accounts_Cannot_be_the_Same</fullName>
        <active>true</active>
        <errorConditionFormula>Account_to_Keep__c =   Account_to_Merge__c</errorConditionFormula>
        <errorMessage>You have selected the same account to merge that you selected to keep.  Please select a different account to merge.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Accounts_to_Merge_Must_be_Same_Community</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(Account_to_Keep__r.Community__c ) &lt;&gt;  TEXT(Account_to_Merge__r.Community__c)</errorConditionFormula>
        <errorMessage>You have selected Accounts in two different communities.  You may only merge accounts in the same community.</errorMessage>
    </validationRules>
</CustomObject>